[PT-10]오류 코드와 메시지 처리6

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -29,3 +29,6 @@ range = 범위는 {0} ~ {1} 까지 허용합니다.
 max = 최대 {0} 까지 허용합니다.
 min = 최소 {0} 이상이어야 합니다.
 
+#Type추가
+typeMismatch.java.lang.Integer = 숫자를 입력해주세요.
+typeMismatch = 타입 오류 입니다.
