--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -32,3 +32,11 @@ min = 최소 {0} 이상이어야 합니다.
 #Type추가
 typeMismatch.java.lang.Integer = 숫자를 입력해주세요.
 typeMismatch = 타입 오류 입니다.
+
+#Bean Validation 추가
+
+NotBlank.item.itemName=상품 이름을 적어주세요.
+
+NotBlank={0} 공백 X
+Range= {0}, {2} ~ {1} 허용
+Max={0}, 최대 {1}
