--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -37,6 +37,8 @@ typeMismatch = 타입 오류 입니다.
 
 NotBlank.item.itemName=상품 이름을 적어주세요.
 
+NotBlank.itemName
+
 NotBlank={0} 공백 X
 Range= {0}, {2} ~ {1} 허용
 Max={0}, 최대 {1}
